[package]
name = "dispersion"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = [
    "multipart",
    "rustls-tls",
    "stream",
    "blocking",
    "json",
] }
octocrab = { version = "0.44.1", features = ["rustls"] }
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
chrono = "0.4.41"
eyre = "0.6.12"
clap = { version = "4.5.48", features = ["derive"] }
log = "0.4"
fern = "0.7"
humantime = "2.2.0"
regex = "1.11.1"
tempfile = "3.20.0"
hyper = { version = "1.6.0", features = ["full"] }
glob = "0.3.2"
tar = "0.4.44"
flate2 = "1.1.2"
zip = "4.0.0"
semver = "1.0.26"
fs2 = "0.4.3"
indicatif = "0.17.11"
